# win-defender

./: README.md  pyproject.toml  sync-time-nic.py  win-block-usb.py
examples/: block_root_hubs.py  exe_generator.py  remove_admin_privileges.py  time_syncer.py
win_defender/: sync-time-nic.py  tools.py  utils.py  win-block-usb.py
